[gd_scene load_steps=7 format=3 uid="uid://ci5x14wwy6x2e"]

[ext_resource type="Texture2D" uid="uid://60uekvb63ytw" path="res://Asset/4. Character/Marcille Donato/marcille_cropped.png" id="1_ks1in"]
[ext_resource type="Script" path="res://Utility/Option/OptionSlot.gd" id="2_0cs0u"]
[ext_resource type="FontFile" uid="uid://ceodpvgjntrsf" path="res://Asset/6. Font/DOSGothic.ttf" id="2_4utpr"]
[ext_resource type="Texture2D" uid="uid://dygghqc8j53ik" path="res://Asset/10. GUI/GUI_Frame.png" id="2_hdqwu"]

[sub_resource type="LabelSettings" id="LabelSettings_2rdd7"]
font = ExtResource("2_4utpr")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rjlbp"]
font = ExtResource("2_4utpr")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect"]
show_behind_parent = true
custom_minimum_size = Vector2(480, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -32.0
offset_right = 240.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hdqwu")
region_rect = Rect2(7, 1, 18, 30)
script = ExtResource("2_0cs0u")

[node name="Option_TextureIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 56.0
offset_bottom = 52.0
texture = ExtResource("1_ks1in")
expand_mode = 1
stretch_mode = 4

[node name="Option_Level" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 12.0
offset_right = 104.0
offset_bottom = 52.0
text = "Lv 2"
label_settings = SubResource("LabelSettings_2rdd7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option_Description" type="Label" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 12.0
offset_right = 472.0
offset_bottom = 52.0
text = "test
"
label_settings = SubResource("LabelSettings_rjlbp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
